// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parseDeliveriesCSV matches the golden snapshot for the resource role (330) 1`] = `
{
  "deliveries": [
    {
      "endDate": "2026-06-10",
      "key": "alvarez_ana",
      "minutesPerSession": 45,
      "name": "Alvarez, Ana",
      "seisId": "2000001",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "45 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 45,
    },
    {
      "endDate": "2026-06-10",
      "key": "bishop_ben",
      "minutesPerSession": 30,
      "name": "Bishop, Ben",
      "seisId": "2000002",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "30 min x 5 Times = 150 min Weekly",
      "sessionsPerWeek": 5,
      "startDate": "2025-08-15",
      "weeklyMinutes": 150,
    },
    {
      "endDate": "2026-06-10",
      "key": "foster_finn",
      "minutesPerSession": 30,
      "name": "Foster, Finn",
      "seisId": "2000006",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "60 min x 2 Times = 120 min Daily",
      "sessionsPerWeek": 20,
      "startDate": "2025-08-15",
      "weeklyMinutes": 600,
    },
    {
      "endDate": "2026-06-10",
      "key": "gomez_gia",
      "minutesPerSession": 30,
      "name": "Gomez, Gia",
      "seisId": "2000007",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "300 min Yearly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 9,
    },
    {
      "endDate": "2026-06-10",
      "key": "hunt_hana",
      "minutesPerSession": 30,
      "name": "Hunt, Hana",
      "seisId": "2000008",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "90 min x 3 Times = 270 min Yearly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 8,
    },
    {
      "endDate": "2026-06-10",
      "key": "ng-patel_nadia",
      "minutesPerSession": 30,
      "name": "Ng-Patel, Nadia",
      "seisId": "2000010",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "30 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-09-01",
      "weeklyMinutes": 30,
    },
    {
      "endDate": "2026-06-10",
      "key": "vanhorn_vera",
      "minutesPerSession": 45,
      "name": "Van Horn, Vera",
      "seisId": "2000011",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "45 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 45,
    },
  ],
  "errors": [],
  "metadata": {
    "filteredServiceRows": 9,
    "serviceTypeCode": "330",
    "totalRows": 13,
    "uniqueStudents": 7,
  },
  "warnings": [
    {
      "message": "Could not parse frequency: 120 min Monthly",
      "row": 10,
    },
  ],
}
`;

exports[`parseDeliveriesCSV psychologist role (no service code) keeps all service rows 1`] = `
{
  "deliveries": [
    {
      "endDate": "2026-06-10",
      "key": "alvarez_ana",
      "minutesPerSession": 45,
      "name": "Alvarez, Ana",
      "seisId": "2000001",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "45 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 45,
    },
    {
      "endDate": "2026-06-10",
      "key": "bishop_ben",
      "minutesPerSession": 30,
      "name": "Bishop, Ben",
      "seisId": "2000002",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "30 min x 5 Times = 150 min Weekly",
      "sessionsPerWeek": 5,
      "startDate": "2025-08-15",
      "weeklyMinutes": 150,
    },
    {
      "endDate": "2026-06-10",
      "key": "cho_cora",
      "minutesPerSession": 30,
      "name": "Cho, Cora",
      "seisId": "2000003",
      "service": "415 - Language and Speech",
      "sessionsFrequency": "30 min x 2 Times = 60 min Weekly",
      "sessionsPerWeek": 2,
      "startDate": "2025-08-15",
      "weeklyMinutes": 60,
    },
    {
      "endDate": "2026-06-10",
      "key": "diaz_drew",
      "minutesPerSession": 30,
      "name": "Diaz, Drew",
      "seisId": "2000004",
      "service": "510 - Individual  counseling",
      "sessionsFrequency": "30 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 30,
    },
    {
      "endDate": "2026-06-10",
      "key": "evans_ella",
      "minutesPerSession": 30,
      "name": "Evans, Ella",
      "seisId": "2000005",
      "service": "450 - Occupational Therapy",
      "sessionsFrequency": "15 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 15,
    },
    {
      "endDate": "2026-06-10",
      "key": "foster_finn",
      "minutesPerSession": 30,
      "name": "Foster, Finn",
      "seisId": "2000006",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "60 min x 2 Times = 120 min Daily",
      "sessionsPerWeek": 20,
      "startDate": "2025-08-15",
      "weeklyMinutes": 600,
    },
    {
      "endDate": "2026-06-10",
      "key": "gomez_gia",
      "minutesPerSession": 30,
      "name": "Gomez, Gia",
      "seisId": "2000007",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "300 min Yearly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 9,
    },
    {
      "endDate": "2026-06-10",
      "key": "hunt_hana",
      "minutesPerSession": 30,
      "name": "Hunt, Hana",
      "seisId": "2000008",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "90 min x 3 Times = 270 min Yearly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 8,
    },
    {
      "endDate": "2026-06-10",
      "key": "ito_ken",
      "minutesPerSession": 30,
      "name": "Ito, Ken",
      "seisId": "2000009",
      "service": "900 - Other Service",
      "sessionsFrequency": "30 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 30,
    },
    {
      "endDate": "2026-06-10",
      "key": "ng-patel_nadia",
      "minutesPerSession": 30,
      "name": "Ng-Patel, Nadia",
      "seisId": "2000010",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "30 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-09-01",
      "weeklyMinutes": 30,
    },
    {
      "endDate": "2026-06-10",
      "key": "vanhorn_vera",
      "minutesPerSession": 45,
      "name": "Van Horn, Vera",
      "seisId": "2000011",
      "service": "330 - Specialized Academic Instruction",
      "sessionsFrequency": "45 min Weekly",
      "sessionsPerWeek": 1,
      "startDate": "2025-08-15",
      "weeklyMinutes": 45,
    },
  ],
  "errors": [],
  "metadata": {
    "filteredServiceRows": 13,
    "serviceTypeCode": null,
    "totalRows": 13,
    "uniqueStudents": 11,
  },
  "warnings": [
    {
      "message": "Could not parse frequency: 120 min Monthly",
      "row": 10,
    },
  ],
}
`;
